# helloi

./: pyproject.toml
hello/scripts/: __init__.py
