[tool.poetry]
name = "hello"
version = "0.1.0"
description = ""
authors = ["aphmelev <i@aphmelev.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
colorama = "^0.4.6"


[tool.poetry.scripts]
say-hello = "hello.scripts.say_hello:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ipython = "^8.23.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
